--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "react-spinners": "^0.5.4",
