--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
+    "@material-ui/core": "^4.2.0",
+    "@material-ui/styles": "^4.2.0",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "history": "^4.9.0",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-spinners": "^0.5.4",
+    "reactstrap": "^8.0.1",
     "styled-components": "^4.2.0"
   },
   "scripts": {
